# simh-cmake

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README-CMake.md  README.md  appveyor.yml  cmake-builder.ps1  cmake-builder.sh  cppcheck.txt  descrip.mms  gtags.conf  makefile  scp.c  scp.h  sim_BuildROMs.c  sim_card.c  sim_console.c  sim_console.h  sim_defs.h  sim_disk.c  sim_disk.h  sim_ether.c  sim_ether.h  sim_fio.c  sim_fio.h  sim_frontpanel.c  sim_imd.c  sim_iso_names.h  sim_os_renames.h  sim_printf_fmts.h  sim_scsi.c  sim_serial.c  sim_serial.h  sim_sock.c  sim_sock.h  sim_tape.c  sim_tape.h  sim_timer.c  (+6 more)
.github/: ISSUE_TEMPLATE.md
3B2/: 3b2_400_mau.c  3b2_cpu.c  3b2_cpu.h  3b2_ctc.c  3b2_ctc.h  3b2_defs.h  3b2_dmac.c  3b2_dmac.h  3b2_id.c  3b2_id.h  3b2_if.c  3b2_if.h  3b2_io.c  3b2_io.h  3b2_iu.c  3b2_iu.h  3b2_mau.c  3b2_mau.h  3b2_mmu.c  3b2_mmu.h  3b2_ni.c  3b2_ni.h  3b2_ports.c  3b2_ports.h  3b2_sys.c  3b2_sys.h  3b2_sysdev.c  3b2_sysdev.h  CMakeLists.txt  README.md  rom_400_bin.h
ALTAIR/: CMakeLists.txt  altair_dsk.c  altair_sys.c
AltairZ80/: CMakeLists.txt  altairz80_cpu.c  altairz80_defs.h  altairz80_dsk.c  altairz80_hdsk.c  altairz80_mhdsk.c  altairz80_net.c  altairz80_sio.c  altairz80_sys.c  flashwriter2.c  m68kasm.c  m68ksim.c  mfdc.c  n8vem.c  s100_disk2.c  s100_disk3.c  s100_fif.c  s100_hdc1001.c  s100_mdsa.c  s100_mdsad.c  vfdhd.c  wd179x.c
B5500/: CMakeLists.txt  b5500_cpu.c  b5500_defs.h  b5500_dk.c  b5500_dr.c  b5500_dtc.c  b5500_io.c  b5500_mt.c  b5500_sys.c  b5500_urec.c
BESM6/: CMakeLists.txt  besm6_cpu.c  besm6_defs.h  besm6_disk.c  besm6_panel.c  besm6_printer.c  besm6_punch.c  besm6_punchcard.c  besm6_sys.c  besm6_tty.c
CDC1700/: CMakeLists.txt  cdc1700_cd.c  cdc1700_cpu.c  cdc1700_dc.c  cdc1700_defs.h  cdc1700_dp.c  cdc1700_io.c  cdc1700_msos5.c  cdc1700_mt.c  cdc1700_sym.c  cdc1700_sys.c
GRI/: CMakeLists.txt  gri_sys.c
H316/: CMakeLists.txt  h316_cpu.c  h316_dp.c  h316_fhd.c  h316_hi.c  h316_rtc.c  h316_sys.c  h316_udp.c
HP2100/: CMakeLists.txt  hp2100_baci.c  hp2100_bugfixes.txt  hp2100_cpu.c  hp2100_cpu.h  hp2100_cpu0.c  hp2100_cpu1.c  hp2100_cpu1.h  hp2100_cpu2.c  hp2100_cpu3.c  hp2100_cpu4.c  hp2100_cpu5.c  hp2100_cpu6.c  hp2100_cpu7.c  hp2100_defs.h  hp2100_di.c  hp2100_di.h  hp2100_di_da.c  hp2100_diag.txt  hp2100_disclib.c  hp2100_disclib.h  hp2100_dp.c  hp2100_dq.c  hp2100_dr.c  hp2100_ds.c  hp2100_fp.c  hp2100_fp.h  hp2100_fp1.c  hp2100_fp1.h  hp2100_ipl.c  hp2100_lps.c  hp2100_lpt.c  hp2100_mpx.c  hp2100_ms.c  hp2100_mt.c  hp2100_mux.c  hp2100_pif.c  hp2100_release.txt  hp2100_stddev.c  hp2100_sys.c
HP3000/: CMakeLists.txt  hp3000_atc.c  hp3000_clk.c  hp3000_cpu.c  hp3000_cpu.h  hp3000_cpu_base.c  hp3000_cpu_cis.c  hp3000_cpu_fp.c  hp3000_cpu_ims.h  hp3000_defs.h  hp3000_ds.c  hp3000_io.h  hp3000_iop.c  hp3000_lp.c  hp3000_mem.c  hp3000_mpx.c  hp3000_ms.c  hp3000_release.txt  hp3000_scmb.c  hp3000_sel.c  hp3000_sys.c  hp_disclib.c  hp_disclib.h  hp_tapelib.c  hp_tapelib.h
I1401/: CMakeLists.txt  i1401_cd.c  i1401_cpu.c  i1401_mt.c  i1401_sys.c
I1620/: CMakeLists.txt  i1620_cd.c  i1620_cpu.c  i1620_defs.h  i1620_lp.c  i1620_sys.c  i1620_tty.c
I650/: 650_test.ini  CMakeLists.txt  i650_cdp.c  i650_cdr.c  i650_cpu.c  i650_defs.h  i650_mt.c  i650_sys.c
I7000/: CMakeLists.txt  i7000_cdp.c  i7000_cdr.c  i7000_chan.c  i7000_chron.c  i7000_com.c  i7000_defs.h  i7000_dsk.c  i7000_ht.c  i7000_lpr.c  i7000_mt.c  i7010_chan.c  i7010_cpu.c  i7010_defs.h  i7010_sys.c  i701_chan.c  i701_cpu.c  i701_sys.c  i7070_chan.c  i7070_cpu.c  i7070_sys.c  i7080_chan.c  i7080_cpu.c  i7080_defs.h  i7080_sys.c  i7090_cdp.c  i7090_cdr.c  i7090_chan.c  i7090_cpu.c  i7090_defs.h  i7090_drum.c  i7090_hdrum.c  i7090_lpr.c  i7090_sys.c
I7094/: CMakeLists.txt  i7094_binloader.c  i7094_cd.c  i7094_com.c  i7094_cpu.c  i7094_lp.c  i7094_sys.c
Ibm1130/: CMakeLists.txt  ibm1130_cpu.c  ibm1130_cr.c  ibm1130_defs.h  ibm1130_disk.c  ibm1130_fmt.c  ibm1130_gdu.c  ibm1130_gui.c  ibm1130_sca.c  ibm1130_sys.c  ibm1130_t2741.c
Intel-Systems/: CMakeLists.txt
Interdata/: CMakeLists.txt  id16_cpu.c  id16_sys.c  id32_cpu.c  id32_sys.c  id_defs.h
LGP/: CMakeLists.txt  lgp_sys.c
NOVA/: CMakeLists.txt  eclipse_cpu.c  nova_cpu.c  nova_mta.c  nova_sys.c
PDP1/: CMakeLists.txt  pdp1_dt.c  pdp1_stddev.c  pdp1_sys.c
PDP10/: CMakeLists.txt  ka10_ai.c  ka10_auxcpu.c  ka10_ch10.c  ka10_dkb.c  ka10_dpk.c  ka10_iii.c  ka10_imx.c  ka10_mty.c  ka10_pd.c  ka10_pmp.c  ka10_stk.c  ka10_ten11.c  ka10_tk10.c  kl10_fe.c  kl10_nia.c  kx10_cp.c  kx10_cpu.c  kx10_cr.c  kx10_cty.c  kx10_dc.c  kx10_defs.h  kx10_df.c  kx10_dk.c  kx10_dp.c  kx10_dpy.c  kx10_dt.c  kx10_imp.c  kx10_lp.c  kx10_mt.c  kx10_pt.c  kx10_rc.c  kx10_rh.c  kx10_rp.c  kx10_rs.c  kx10_sys.c  kx10_tu.c  pdp10_cpu.c  pdp10_defs.h  pdp10_fe.c  (+11 more)
PDP11/: CMakeLists.txt  pdp11_ch.c  pdp11_cpu.c  pdp11_cr.c  pdp11_daz.c  pdp11_ddcmp.h  pdp11_defs.h  pdp11_dl.c  pdp11_dmc.c  pdp11_dup.c  pdp11_dz.c  pdp11_hk.c  pdp11_io_lib.c  pdp11_kmc.c  pdp11_ng.c  pdp11_pclk.c  pdp11_rk.c  pdp11_rl.c  pdp11_rp.c  pdp11_rq.c  pdp11_stddev.c  pdp11_sys.c  pdp11_ta.c  pdp11_td.c  pdp11_tm.c  pdp11_tq.c  pdp11_ts.c  pdp11_tu.c  pdp11_uc15.c  pdp11_vh.c  pdp11_xq.c  pdp11_xu.c
PDP18B/: CMakeLists.txt  pdp18b_cpu.c  pdp18b_defs.h  pdp18b_dr15.c  pdp18b_dt.c  pdp18b_lp.c  pdp18b_rf.c  pdp18b_rp.c  pdp18b_sys.c
PDP8/: CMakeLists.txt  pdp8_cpu.c  pdp8_ct.c  pdp8_dt.c  pdp8_lp.c  pdp8_mt.c  pdp8_pt.c  pdp8_rf.c  pdp8_rk.c  pdp8_rl.c  pdp8_rx.c  pdp8_sys.c  pdp8_td.c  pdp8_tsc.c  pdp8_tt.c
PDQ-3/: pdq3_cpu.c  pdq3_debug.c  pdq3_fdc.c  pdq3_sys.c
S3/: CMakeLists.txt  s3_cd.c  s3_cpu.c  s3_disk.c  s3_sys.c
SAGE/: CMakeLists.txt  i8272.c  m68k_cpu.c  m68k_sys.c
SDS/: CMakeLists.txt  sds_defs.h  sds_mt.c  sds_sys.c
SSEM/: CMakeLists.txt  ssem_sys.c
TX-0/: CMakeLists.txt  tx0_cpu.c  tx0_sys.c  tx0_sys_orig.c
display/: ng.c  (+7 more)
slirp/: CMakeLists.txt  bootp.c  if.c  ip.h  ip_icmp.c  ip_input.c  ip_output.c  mbuf.c  misc.c  sbuf.c  slirp.c  socket.c  tcp_input.c  tcp_output.c  tcp_subr.c  tftp.c  udp.c
(+331 files in other folders)
